--- a/styles/stats.css
+++ b/styles/stats.css
@@ -2,7 +2,7 @@
   @apply grid grid-cols-1 sm:grid-cols-3 gap-4;
 }
 .tile {
-  @apply bg-white shadow-md p-2 text-blue-900 text-center;
+  @apply bg-white shadow-md p-2 text-[#97704F] text-center;
 }
 .tile-header {
   @apply uppercase text-gray-500 font-bold text-xs text-center m-0;
